# tiny-fastapi-di

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
Issues/: 01-Compatible-Depends-Class.md
docs/: api-reference.md  fastapi-comparison.md  getting-started.md  index.md
docs/guide/: cleanup.md  core-concepts.md  dependencies.md  multi-framework.md  pydantic.md  testing.md
src/tiny_di/: __init__.py  pydantic.py
src/tiny_fastapi_di/: __init__.py  core.py  py_validator.py
tests/: test_core.py  test_pydantic.py
