[project]
name = "tiny-fastapi-di"
version = "0.1.0"
description = "Minimal async dependency injection, FastAPI-compatible in ~160 lines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
docs = ["zensical"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_fastapi_di"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
