[project]
name = "tiny-fastapi-di"
version = "0.2.0"
description = "Production-ready async dependency injection. FastAPI-compatible patterns in ~220 lines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
keywords = ["dependency-injection", "async", "fastapi", "di", "ioc"]
authors = [
    { name = "Yaakov Belch", email = "yaakov.belch@gmail.com" },
    { name = "Claude (Anthropic)" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://yaakov-belch.github.io/tiny-fastapi-di/"
Documentation = "https://yaakov-belch.github.io/tiny-fastapi-di/"
Repository = "https://github.com/Yaakov-Belch/tiny-fastapi-di"
Issues = "https://github.com/Yaakov-Belch/tiny-fastapi-di/issues"

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]
docs = ["zensical"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_fastapi_di"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
